ghép màn probe